# stackoverflow_question

ProjectA/: CMakeLists.txt  ProjectAConfig.cmake
ProjectA/include/ProjectA/: MyClassA.h
ProjectA/src/: MyClassA.cxx
ProjectB/: CMakeLists.txt  exeB.cxx  project_b.i
ProjectB/include/ProjectB/: MyClassB.h
ProjectB/src/: MyClassB.cxx
